--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,35 +1,60 @@
-<p style="color: green"><%= notice %></p>
+<div class="max-w-2xl mx-auto">
+  <div class="card bg-base-100 shadow-xl">
+    <div class="card-body">
+      <h1 class="card-title text-3xl mb-4">Welcome back!</h1>
+      <p class="text-lg mb-6">Signed in as <strong><%= Current.user.email %></strong></p>
 
-<p>Signed as <%= Current.user.email %></p>
+      <div class="divider">Account Settings</div>
 
-<h2>Login and verification</h2>
+      <div class="grid gap-4">
+        <%= link_to edit_password_path, class: "btn btn-outline justify-start" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25a3 3 0 013 3m3 0a6 6 0 01-7.029 5.912c-.563-.097-1.159.026-1.563.43L10.5 17.25H8.25v-2.25H6v-2.25H4.5V12h2.25l1.757-1.757c.404-.404.527-1 .43-1.563A6 6 0 1121.75 8.25z" />
+          </svg>
+          Change password
+        <% end %>
 
-<div>
-  <%= link_to "Change password", edit_password_path %>
+        <%= link_to edit_identity_email_path, class: "btn btn-outline justify-start" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75" />
+          </svg>
+          Change email address
+        <% end %>
+
+        <%= link_to new_two_factor_authentication_profile_totp_path, class: "btn btn-outline justify-start" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z" />
+          </svg>
+          Two-Factor Authentication
+        <% end %>
+
+        <% if Current.user.otp_required_for_sign_in? %>
+          <%= link_to two_factor_authentication_profile_recovery_codes_path, class: "btn btn-outline justify-start" do %>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 5.25a3 3 0 013 3m3 0a6 6 0 01-7.029 5.912c-.563-.097-1.159.026-1.563.43L10.5 17.25H8.25v-2.25H6v-2.25H4.5V12h2.25l1.757-1.757c.404-.404.527-1 .43-1.563A6 6 0 1121.75 8.25z" />
+            </svg>
+            Recovery Codes
+          <% end %>
+        <% end %>
+      </div>
+
+      <div class="divider">Access History</div>
+
+      <div class="grid gap-4">
+        <%= link_to sessions_path, class: "btn btn-outline justify-start" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M9 17.25v1.007a3 3 0 01-.879 2.122L7.5 21h9l-.621-.621A3 3 0 0115 18.257V17.25m6-12V15a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 15V5.25m18 0A2.25 2.25 0 0018.75 3H5.25A2.25 2.25 0 003 5.25m18 0V12a2.25 2.25 0 01-2.25 2.25H5.25A2.25 2.25 0 013 12V5.25" />
+          </svg>
+          Devices & Sessions
+        <% end %>
+
+        <%= link_to authentications_events_path, class: "btn btn-outline justify-start" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          Activity Log
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
-
-<div>
-  <%= link_to "Change email address", edit_identity_email_path %>
-</div>
-
-<div>
-  <%= link_to "Two-Factor Authentication", new_two_factor_authentication_profile_totp_path %>
-</div>
-
-<% if Current.user.otp_required_for_sign_in? %>
-  <div><%= link_to "Recovery Codes", two_factor_authentication_profile_recovery_codes_path %></div>
-<% end %>
-
-<h2>Access history</h2>
-
-<div>
-  <%= link_to "Devices & Sessions", sessions_path %>
-</div>
-
-<div>
-  <%= link_to "Activity Log", authentications_events_path %>
-</div>
-
-<br>
-
-<%= button_to "Log out", Current.session, method: :delete %>
