--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,43 +1,57 @@
-<p style="color: red"><%= alert %></p>
+<div class="max-w-md mx-auto mt-8">
+  <div class="card bg-base-100 shadow-xl">
+    <div class="card-body">
+      <h1 class="card-title text-3xl mb-6 justify-center">Change your password</h1>
 
-<h1>Change your password</h1>
-
-<%= form_with(url: password_path, method: :patch) do |form| %>
-  <% if @user.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-        <% @user.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+      <%= form_with(url: password_path, method: :patch, class: "space-y-6") do |form| %>
+        <% if @user.errors.any? %>
+          <div role="alert" class="alert alert-error">
+            <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            <div>
+              <h3 class="font-bold"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
+              <ul class="list-disc list-inside text-sm">
+                <% @user.errors.each do |error| %>
+                  <li><%= error.full_message %></li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
         <% end %>
-      </ul>
+
+        <div class="form-control w-full">
+          <label class="label">
+            <span class="label-text">Current password</span>
+          </label>
+          <%= form.password_field :password_challenge, required: true, autofocus: true, autocomplete: "current-password", class: "input input-bordered w-full" %>
+        </div>
+
+        <div class="form-control w-full">
+          <label class="label">
+            <span class="label-text">New password</span>
+          </label>
+          <%= form.password_field :password, required: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
+          <label class="label">
+            <span class="label-text-alt text-base-content/70">12 characters minimum</span>
+          </label>
+        </div>
+
+        <div class="form-control w-full">
+          <label class="label">
+            <span class="label-text">Confirm new password</span>
+          </label>
+          <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
+        </div>
+
+        <div class="form-control mt-8">
+          <%= form.submit "Save changes", class: "btn btn-primary btn-lg w-full" %>
+        </div>
+      <% end %>
+
+      <div class="card-actions justify-center mt-6">
+        <%= link_to "Back", root_path, class: "btn btn-ghost" %>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :password_challenge, style: "display: block" %>
-    <%= form.password_field :password_challenge, required: true, autofocus: true, autocomplete: "current-password" %>
   </div>
-
-  <div>
-    <%= form.label :password, "New password", style: "display: block" %>
-    <%= form.password_field :password, required: true, autocomplete: "new-password" %>
-    <div>12 characters minimum.</div>
-  </div>
-
-  <div>
-    <%= form.label :password_confirmation, "Confirm new password", style: "display: block" %>
-    <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password" %>
-  </div>
-
-  <div>
-    <%= form.submit "Save changes" %>
-  </div>
-<% end %>
-
-<br>
-
-<div>
-  <%= link_to "Back", root_path %>
 </div>
