--- a/app/views/two_factor_authentication/challenge/recovery_codes/new.html.erb
+++ b/app/views/two_factor_authentication/challenge/recovery_codes/new.html.erb
@@ -1,18 +1,32 @@
-<p style="color: red"><%= alert %></p>
+<div class="max-w-md mx-auto mt-8">
+  <div class="card bg-base-100 shadow-xl">
+    <div class="card-body">
+      <h1 class="card-title text-3xl mb-2 justify-center">Recovery Code</h1>
+      <p class="text-center text-base-content/70 mb-6">Enter one of your recovery codes below to access your account.</p>
 
-<%= form_with(url: two_factor_authentication_challenge_recovery_codes_path) do |form| %>
-  <div>
-    <%= form.label :code do %>
-      <h1>OK, enter one of your recovery codes below:</h1>
-    <% end %>
-    <%= form.text_field :code, autofocus: true, required: true, autocomplete: :off %>
+      <%= form_with(url: two_factor_authentication_challenge_recovery_codes_path, class: "space-y-6") do |form| %>
+        <div class="form-control w-full">
+          <label class="label">
+            <span class="label-text">Recovery Code</span>
+          </label>
+          <%= form.text_field :code, autofocus: true, required: true, autocomplete: :off, class: "input input-bordered w-full text-center text-lg font-mono", placeholder: "xxxxxxxxxx" %>
+        </div>
+
+        <div class="form-control mt-8">
+          <%= form.submit "Continue", class: "btn btn-primary btn-lg w-full" %>
+        </div>
+      <% end %>
+
+      <div class="divider"></div>
+
+      <div class="alert alert-info">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current shrink-0 w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+        </svg>
+        <div class="text-xs">
+          To access your account, enter one of the recovery codes (e.g., xxxxxxxxxx) you saved when you set up your two-factor authentication device.
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div>
-    <%= form.submit "Continue" %>
-  </div>
-<% end %>
-
-<div>
-  <p>To access your account, enter one of the recovery codes (e.g., xxxxxxxxxx) you saved when you set up your two-factor authentication device.</p>
 </div>
