--- a/app/views/two_factor_authentication/profile/recovery_codes/_recovery_code.html.erb
+++ b/app/views/two_factor_authentication/profile/recovery_codes/_recovery_code.html.erb
@@ -1,5 +1,5 @@
 <% if recovery_code.used? %>
-  <li><del><%= recovery_code.code %></del></li>
+  <li class="text-base-content/50 line-through"><%= recovery_code.code %></li>
 <% else %>
-  <li><%= recovery_code.code %></li>
+  <li class="text-lg font-semibold"><%= recovery_code.code %></li>
 <% end %>
