--- a/app/views/identity/emails/edit.html.erb
+++ b/app/views/identity/emails/edit.html.erb
@@ -2,17 +2,17 @@
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
       <% if Current.user.verified? %>
-        <h1 class="card-title text-3xl mb-6 justify-center">Change your email</h1>
+        <h1 class="card-title text-3xl mb-6 justify-center"><%= t("emails.edit.change_email") %></h1>
       <% else %>
-        <h1 class="card-title text-3xl mb-2 justify-center">Verify your email</h1>
+        <h1 class="card-title text-3xl mb-2 justify-center"><%= t("emails.edit.verify_email") %></h1>
         <div role="alert" class="alert alert-info mb-6">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current shrink-0 w-6 h-6">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
           </svg>
-          <span class="text-sm">We sent a verification email to the address below. Check that email and follow those instructions to confirm it's your email address.</span>
+          <span class="text-sm"><%= t("emails.edit.verification_sent") %></span>
         </div>
         <div class="mb-6">
-          <%= button_to "Re-send verification email", identity_email_verification_path, class: "btn btn-outline btn-sm w-full" %>
+          <%= button_to t("emails.edit.resend_verification_email"), identity_email_verification_path, class: "btn btn-outline btn-sm w-full" %>
         </div>
       <% end %>
 
@@ -23,7 +23,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
             <div>
-              <h3 class="font-bold"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
+              <h3 class="font-bold"><%= pluralize(@user.errors.count, t("common.errors.prohibited"), t("common.errors.errors")) %></h3>
               <ul class="list-disc list-inside text-sm">
                 <% @user.errors.each do |error| %>
                   <li><%= error.full_message %></li>
@@ -35,25 +35,25 @@
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">New email address</span>
+            <span class="label-text"><%= t("emails.edit.new_email") %></span>
           </label>
           <%= form.email_field :email, required: true, autofocus: true, class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Current password</span>
+            <span class="label-text"><%= t("emails.edit.current_password") %></span>
           </label>
           <%= form.password_field :password_challenge, required: true, autocomplete: "current-password", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mt-8">
-          <%= form.submit "Save changes", class: "btn btn-primary btn-lg w-full" %>
+          <%= form.submit t("emails.edit.save_changes"), class: "btn btn-primary btn-lg w-full" %>
         </div>
       <% end %>
 
       <div class="card-actions justify-center mt-6">
-        <%= link_to "Back", root_path, class: "btn btn-ghost" %>
+        <%= link_to t("emails.edit.back"), root_path, class: "btn btn-ghost" %>
       </div>
     </div>
   </div>
