--- a/app/views/identity/password_resets/edit.html.erb
+++ b/app/views/identity/password_resets/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="max-w-md mx-auto mt-8">
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
-      <h1 class="card-title text-3xl mb-6 justify-center">Reset your password</h1>
+      <h1 class="card-title text-3xl mb-6 justify-center"><%= t("password_resets.edit.title") %></h1>
 
       <%= form_with(url: identity_password_reset_path, method: :patch, class: "space-y-6") do |form| %>
         <% if @user.errors.any? %>
@@ -10,7 +10,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
             <div>
-              <h3 class="font-bold"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
+              <h3 class="font-bold"><%= pluralize(@user.errors.count, t("common.errors.prohibited"), t("common.errors.errors")) %></h3>
               <ul class="list-disc list-inside text-sm">
                 <% @user.errors.each do |error| %>
                   <li><%= error.full_message %></li>
@@ -24,23 +24,23 @@
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">New password</span>
+            <span class="label-text"><%= t("password_resets.edit.new_password") %></span>
           </label>
           <%= form.password_field :password, required: true, autofocus: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
           <label class="label">
-            <span class="label-text-alt text-base-content/70">12 characters minimum</span>
+            <span class="label-text-alt text-base-content/70"><%= t("password_resets.edit.password_minimum") %></span>
           </label>
         </div>
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Confirm new password</span>
+            <span class="label-text"><%= t("password_resets.edit.confirm_new_password") %></span>
           </label>
           <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mt-8">
-          <%= form.submit "Save changes", class: "btn btn-primary btn-lg w-full" %>
+          <%= form.submit t("password_resets.edit.save_changes"), class: "btn btn-primary btn-lg w-full" %>
         </div>
       <% end %>
     </div>
