--- a/app/views/identity/password_resets/new.html.erb
+++ b/app/views/identity/password_resets/new.html.erb
@@ -1,26 +1,26 @@
 <div class="max-w-md mx-auto mt-8">
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
-      <h1 class="card-title text-3xl mb-2 justify-center">Forgot your password?</h1>
-      <p class="text-center text-base-content/70 mb-6">Enter your email address and we'll send you a link to reset your password.</p>
+      <h1 class="card-title text-3xl mb-2 justify-center"><%= t("password_resets.new.title") %></h1>
+      <p class="text-center text-base-content/70 mb-6"><%= t("password_resets.new.description") %></p>
 
       <%= form_with(url: identity_password_reset_path, class: "space-y-6") do |form| %>
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Email address</span>
+            <span class="label-text"><%= t("password_resets.new.email_address") %></span>
           </label>
           <%= form.email_field :email, required: true, autofocus: true, class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mt-8">
-          <%= form.submit "Send password reset email", class: "btn btn-primary btn-lg w-full" %>
+          <%= form.submit t("password_resets.new.send_password_reset_email"), class: "btn btn-primary btn-lg w-full" %>
         </div>
       <% end %>
 
       <div class="divider"></div>
 
       <div class="text-center">
-        <%= link_to "Back to sign in", sign_in_path, class: "link link-primary" %>
+        <%= link_to t("password_resets.new.back_to_sign_in"), sign_in_path, class: "link link-primary" %>
       </div>
     </div>
   </div>
