--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="max-w-md mx-auto mt-8">
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
-      <h1 class="card-title text-3xl mb-6 justify-center">Sign up</h1>
+      <h1 class="card-title text-3xl mb-6 justify-center"><%= t("registrations.new.title") %></h1>
 
       <%= form_with(url: sign_up_path, class: "space-y-6") do |form| %>
         <% if @user.errors.any? %>
@@ -10,7 +10,7 @@
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
             <div>
-              <h3 class="font-bold"><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h3>
+              <h3 class="font-bold"><%= pluralize(@user.errors.count, t("registrations.errors.prohibited"), t("registrations.errors.errors")) %></h3>
               <ul class="list-disc list-inside text-sm">
                 <% @user.errors.each do |error| %>
                   <li><%= error.full_message %></li>
@@ -22,39 +22,39 @@
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Email address</span>
+            <span class="label-text"><%= t("registrations.new.email_address") %></span>
           </label>
           <%= form.email_field :email, value: @user.email, required: true, autofocus: true, autocomplete: "email", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Password</span>
+            <span class="label-text"><%= t("registrations.new.password") %></span>
           </label>
           <%= form.password_field :password, required: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
           <label class="label">
-            <span class="label-text-alt text-base-content/70">12 characters minimum</span>
+            <span class="label-text-alt text-base-content/70"><%= t("registrations.new.password_minimum") %></span>
           </label>
         </div>
 
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Confirm password</span>
+            <span class="label-text"><%= t("registrations.new.confirm_password") %></span>
           </label>
           <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: "input input-bordered w-full" %>
         </div>
 
         <div class="form-control mt-8">
-          <%= form.submit "Sign up", class: "btn btn-primary btn-lg w-full" %>
+          <%= form.submit t("registrations.new.submit"), class: "btn btn-primary btn-lg w-full" %>
         </div>
       <% end %>
 
-      <div class="divider">OR</div>
+      <div class="divider"><%= t("common.or") %></div>
 
       <div class="text-center">
         <p class="text-sm text-base-content/70">
-          Already have an account?
-          <%= link_to "Sign in", sign_in_path, class: "link link-primary font-semibold" %>
+          <%= t("registrations.new.already_have_account") %>
+          <%= link_to t("registrations.new.sign_in"), sign_in_path, class: "link link-primary font-semibold" %>
         </p>
       </div>
     </div>
