--- a/app/views/two_factor_authentication/challenge/recovery_codes/new.html.erb
+++ b/app/views/two_factor_authentication/challenge/recovery_codes/new.html.erb
@@ -1,19 +1,19 @@
 <div class="max-w-md mx-auto mt-8">
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
-      <h1 class="card-title text-3xl mb-2 justify-center">Recovery Code</h1>
-      <p class="text-center text-base-content/70 mb-6">Enter one of your recovery codes below to access your account.</p>
+      <h1 class="card-title text-3xl mb-2 justify-center"><%= t("two_factor_authentication.challenge.recovery_codes.new.title") %></h1>
+      <p class="text-center text-base-content/70 mb-6"><%= t("two_factor_authentication.challenge.recovery_codes.new.description") %></p>
 
       <%= form_with(url: two_factor_authentication_challenge_recovery_codes_path, class: "space-y-6") do |form| %>
         <div class="form-control w-full">
           <label class="label">
-            <span class="label-text">Recovery Code</span>
+            <span class="label-text"><%= t("two_factor_authentication.challenge.recovery_codes.new.recovery_code") %></span>
           </label>
           <%= form.text_field :code, autofocus: true, required: true, autocomplete: :off, class: "input input-bordered w-full text-center text-lg font-mono", placeholder: "xxxxxxxxxx" %>
         </div>
 
         <div class="form-control mt-8">
-          <%= form.submit "Continue", class: "btn btn-primary btn-lg w-full" %>
+          <%= form.submit t("two_factor_authentication.challenge.recovery_codes.new.continue"), class: "btn btn-primary btn-lg w-full" %>
         </div>
       <% end %>
 
@@ -24,7 +24,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
         <div class="text-xs">
-          To access your account, enter one of the recovery codes (e.g., xxxxxxxxxx) you saved when you set up your two-factor authentication device.
+          <%= t("two_factor_authentication.challenge.recovery_codes.new.info") %>
         </div>
       </div>
     </div>
