Add user to username, annotated models, cleaned up whitespace linter issues

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="card bg-base-100 shadow-xl">
     <div class="card-body">
       <h1 class="card-title text-3xl mb-4"><%= t("home.index.welcome_back") %></h1>
-      <p class="text-lg mb-6"><%= t("home.index.signed_in_as") %> <strong><%= Current.user.email %></strong></p>
+      <p class="text-lg mb-6"><%= t("home.index.signed_in_as") %> <strong><%= Current.user.username %></strong></p>
 
       <div class="divider"><%= t("home.index.account_settings") %></div>
 
