--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar bg-base-100 shadow-lg">
+<header class="navbar bg-base-100 shadow-lg fixed top-0 left-0 right-0 z-50">
   <div class="container mx-auto px-5 flex justify-between items-center w-full">
     <div class="flex-1">
       <%= link_to root_path, class: "btn btn-ghost text-xl" do %>
