--- a/app/views/two_factor_authentication/profile/recovery_codes/index.html.erb
+++ b/app/views/two_factor_authentication/profile/recovery_codes/index.html.erb
@@ -9,10 +9,17 @@
         <span><%= t("two_factor_authentication.profile.recovery_codes.index.description") %></span>
       </div>
 
-      <div class="card bg-base-200 p-6 mb-6">
-        <ul class="space-y-2 font-mono text-center">
-          <%= render @recovery_codes %>
-        </ul>
+      <div data-controller="toggle">
+        <div class="mb-4">
+          <button type="button" data-toggle-target="button" data-action="click->toggle#toggle" data-show-text="<%= t('two_factor_authentication.profile.recovery_codes.index.show_codes') %>" data-hide-text="<%= t('two_factor_authentication.profile.recovery_codes.index.hide_codes') %>" class="btn btn-outline">
+            <%= t('two_factor_authentication.profile.recovery_codes.index.show_codes') %>
+          </button>
+        </div>
+        <div data-toggle-target="content" class="card bg-base-200 p-6 mb-6 hidden">
+          <ul class="space-y-2 font-mono text-center">
+            <%= render @recovery_codes %>
+          </ul>
+        </div>
       </div>
 
       <div class="card-actions justify-end">
